@@ -4,7 +4,8 @@ dbLoadDatabase("../../dbd/example.dbd")
 example_registerRecordDeviceDriver(pdbbase)
 
 drvMksu_init()
-drvAsynIPPortConfigure("MksuServer", "192.168.0.21:56789 UDP", 0, 0, 1)
+drvAsynIPPortConfigure("MksuServer", "134.79.218.64:56789 UDP", 0, 0, 1)
+#drvAsynIPPortConfigure("MksuServer", "192.168.0.21:56789 UDP", 0, 0, 1)
 #drvAsynIPPortConfigure("MksuServer", "134.79.218.64:56789 UDP", 0, 0, 1)
 initMksu("Mksu", "MksuServer")
 
