@@ -1,4 +1,4 @@
-# Database template file generated from MksuList.map on Tue, 10 Apr 2012 21:00:11 +0000
+# Database template file generated from MksuList.map on Wed, 18 Apr 2012 23:28:08 +0000
 
 record(bo, "KLYS:$(AREA):$(LOCATION):FADC_CLR") {
   field(DESC, "Clear FADC Latch")
@@ -6725,7 +6725,7 @@ record(calc, "KLYS:$(AREA):$(LOCATION):MK_N24") {
   field(PRIO, "LOW")
   field(INPA, "KLYS:$(AREA):$(LOCATION):MK_N24_RAW")
   field(EGU, "V")
-  field(CALC, "A * -0.0257")
+  field(CALC, "A * 0.0257")
 }
 
 record(ai, "KLYS:$(AREA):$(LOCATION):MK_N15_RAW") {
@@ -6743,7 +6743,7 @@ record(calc, "KLYS:$(AREA):$(LOCATION):MK_N15") {
   field(PRIO, "LOW")
   field(INPA, "KLYS:$(AREA):$(LOCATION):MK_N15_RAW")
   field(EGU, "V")
-  field(CALC, "A * -.0158")
+  field(CALC, "A * .0158")
 }
 
 record(ai, "KLYS:$(AREA):$(LOCATION):MK_N5_RAW") {
@@ -6761,7 +6761,7 @@ record(calc, "KLYS:$(AREA):$(LOCATION):MK_N5") {
   field(PRIO, "LOW")
   field(INPA, "KLYS:$(AREA):$(LOCATION):MK_N5_RAW")
   field(EGU, "V")
-  field(CALC, "A * -.00511")
+  field(CALC, "A * .00511")
 }
 
 record(ai, "KLYS:$(AREA):$(LOCATION):MK_P2D5_RAW") {
